MODIFICACIONES: corrediones de la data
